# menemory

./: .gitignore  LICENSE  README.md  menemory  pyproject.toml  vla
.github/workflows/: publish-pypi.yml  publish-testpypi.yml
.menemory/: config.json
engine/: codex_runner.py  tmux_manager.py
src/menemory/: __init__.py  bootstrap.py  cli.py  memory_manager.py  session_manager.py  settings.py  supabase_sync.py  tmux_manager.py  workspace.py
tests/: test_session_history.py
