[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "menemory"
version = "0.1.3"
description = "Stateful AI workspace memory CLI"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Menemory Contributors" }]
license = { text = "MIT" }
keywords = ["ai", "memory", "cli", "session", "supabase", "tmux"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Environment :: Console",
]

[project.urls]
Homepage = "https://github.com/minuum/menemory"
Repository = "https://github.com/minuum/menemory"
Issues = "https://github.com/minuum/menemory/issues"

[project.scripts]
menemory = "menemory.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
